--- a/Xcode photo picker/Base.lproj/Main.storyboard
+++ b/Xcode photo picker/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label 1 - ML demo" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xuX-xm-yAi" userLabel="This is a demo application for">
-                                <rect key="frame" x="15" y="118" width="350" height="69"/>
+                                <rect key="frame" x="15" y="85" width="350" height="69"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -30,12 +30,25 @@ for machine learning</string>
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label 2- App Developed by Brandon Sanford" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1xO-Jf-z1z">
-                                <rect key="frame" x="15" y="195" width="340" height="68"/>
+                                <rect key="frame" x="15" y="162" width="340" height="68"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Hp-5x-FgQ">
+                                <rect key="frame" x="80" y="238" width="220" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Pick an Image for Preview"/>
+                                <connections>
+                                    <action selector="pickImageBtnClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ggH-ql-kDu"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CQ5-7j-qd8">
+                                <rect key="frame" x="16" y="310" width="349" height="378"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -43,6 +56,8 @@ for machine learning</string>
                     <connections>
                         <outlet property="MultiLineLabel1" destination="xuX-xm-yAi" id="PnK-eI-G9I"/>
                         <outlet property="MultiLineLabel2" destination="1xO-Jf-z1z" id="qJV-rF-ohJ"/>
+                        <outlet property="UI_Image_View" destination="CQ5-7j-qd8" id="PZe-nk-tcc"/>
+                        <outlet property="btn" destination="3Hp-5x-FgQ" id="TyG-Sx-jfc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
